# options-pricing-engine

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  ~$README.md
README.files/: filelist.xml  image.emf
notebooks/: 01_foundations_gbm.ipynb
scripts/: 01_foundations_gbm.py  greeks_plots.py  monte_carlo_diagnostic_plots.py
src/: black_scholes.py  greeks_plots.py  mc_greeks_fd.py  monte_carlo.py  processes.py
src/optpricing/: black_scholes.py  exotics.py  mc_greeks_fd.py  monte_carlo.py  processes.py
tests/: test_greeks.py  test_mc_greeks.py  test_monte_carlo.py  test_put_call_parity.py
