[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "options-pricing-engine"
version = "0.1.0"
description = "Vanilla and exotic options pricing from first principles"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]