[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optpricing"
version = "0.1.0"
description = "An options pricing engine built from first principles."
readme = "README.md"          # remove this line if you don't have a README yet
requires-python = ">=3.10"    # you use `int | None`, `tuple[float, float]`
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]         # so `pip install -e ".[dev]"` pulls in test deps

# Tell setuptools the packages live under src/ (this *is* the src-layout switch)
[tool.setuptools.packages.find]
where = ["src"]